<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" xmlns:tools="http://schemas.android.com/tools"
                android:background="#3E80B4"
                android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/lbl_paument_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/lbl_payment_method"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/txt_paument_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                tools:text="Visa"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/lbl_cardIssuers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/lbl_bank"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/txt_cardIssuers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                tools:text="Santander"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/lbl_installment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/lbl_installments"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/txt_installment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                tools:text="2"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">

        <TextView
                android:id="@+id/lbl_total_pay_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/lbl_pay_amount"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"/>

        <TextView
                android:id="@+id/txt_total_pay_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                tools:text="100"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
            android:id="@+id/lbl_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/lbl_total_amount"
            android:textColor="@android:color/white"
            android:textSize="15dp"
            android:textStyle="bold"/>

        <TextView
                android:id="@+id/txt_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="130"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold"/>
    </LinearLayout>

    <TextView
            android:id="@+id/txt_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:text="@string/exit"
            android:textColor="@android:color/white"
            android:textSize="15sp"
            android:textStyle="bold"/>


    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="#3E80B4"
            android:orientation="horizontal" >

        <Button
                android:id="@+id/btn_yes"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:text="@string/yes"
                android:textColor="#5DBCD2"
                android:textStyle="bold" android:focusable="true"/>

        <Button
                android:id="@+id/btn_no"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginLeft="5dp"
                android:background="@android:color/white"
                android:clickable="true"
                android:text="@string/no"
                android:textColor="#5DBCD2"
                android:textStyle="bold" android:focusable="true" android:layout_marginStart="5dp"/>
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>